--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <header>
         <h1>Manuel Lancastre</h1>
         <div class="social-links">
-            <a href="https://www.linkedin.com/in/manuellancastre/" target="_blank">LinkedIn Profile</a>
+            <a href="https://www.linkedin.com/in/manuellancastre" target="_blank">LinkedIn Profile</a>
         </div>
     </header>
 
