--- a/index.html
+++ b/index.html
@@ -69,6 +69,29 @@
             padding-bottom: 10px;
         }
 
+        .pdf-container {
+            width: 100%;
+            height: 800px;
+            margin: 20px 0;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        .download-button {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #2c3e50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            margin: 20px 0;
+            transition: background-color 0.3s;
+        }
+
+        .download-button:hover {
+            background-color: #1a252f;
+        }
+
         @media (max-width: 768px) {
             body {
                 padding: 10px;
@@ -83,6 +106,10 @@
                 margin: 10px auto;
                 max-width: 200px;
             }
+
+            .pdf-container {
+                height: 600px;
+            }
         }
     </style>
 </head>
@@ -96,9 +123,9 @@
 
     <main class="resume-section">
         <h2>Resume</h2>
-        <!-- Add your resume content here -->
-        <div id="resume-content">
-            <p>Your resume content will go here...</p>
+        <a href="resume.pdf" class="download-button" download>Download Resume</a>
+        <div class="pdf-container">
+            <embed src="resume.pdf" type="application/pdf" width="100%" height="100%" />
         </div>
     </main>
 </body>
