--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manuel Lancastre - Portfolio</title>
+    <title>Manuel Lancastre - Projects</title>
     <style>
         * {
             margin: 0;
@@ -55,40 +55,54 @@
             background-color: #005582;
         }
 
-        .resume-section {
+        .projects-section {
             background-color: #fff;
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
 
-        .resume-section h2 {
+        .projects-section h2 {
             color: #2c3e50;
             margin-bottom: 20px;
             border-bottom: 2px solid #eee;
             padding-bottom: 10px;
         }
 
-        .pdf-container {
-            width: 100%;
-            height: 800px;
-            margin: 20px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+        .project-card {
+            background-color: #f8f9fa;
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 20px;
+            transition: transform 0.3s;
         }
 
-        .download-button {
+        .project-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .project-card h3 {
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+
+        .project-card p {
+            color: #666;
+            margin-bottom: 15px;
+        }
+
+        .project-links a {
             display: inline-block;
-            padding: 12px 24px;
+            padding: 8px 16px;
             background-color: #2c3e50;
             color: white;
             text-decoration: none;
             border-radius: 5px;
-            margin: 20px 0;
+            margin-right: 10px;
             transition: background-color 0.3s;
         }
 
-        .download-button:hover {
+        .project-links a:hover {
             background-color: #1a252f;
         }
 
@@ -125,10 +139,6 @@
                 margin: 10px auto;
                 max-width: 200px;
             }
-
-            .pdf-container {
-                height: 600px;
-            }
         }
     </style>
 </head>
@@ -144,12 +154,17 @@
         </div>
     </header>
 
-    <main class="resume-section">
-        <h2>Resume</h2>
-        <a href="resume.pdf" class="download-button" download>Download Resume</a>
-        <div class="pdf-container">
-            <embed src="resume.pdf" type="application/pdf" width="100%" height="100%" />
+    <main class="projects-section">
+        <h2>Projects</h2>
+        <div class="project-card">
+            <h3>Project Name</h3>
+            <p>Project description goes here. Explain what the project does, technologies used, and your role in it.</p>
+            <div class="project-links">
+                <a href="#" target="_blank">View Project</a>
+                <a href="#" target="_blank">GitHub Repository</a>
+            </div>
         </div>
+        <!-- Add more project cards as needed -->
     </main>
 </body>
 </html> 
