Update project card with prosthesis control project details

--- a/projects.html
+++ b/projects.html
@@ -157,11 +157,12 @@
     <main class="projects-section">
         <h2>Projects</h2>
         <div class="project-card">
-            <h3>Project Name</h3>
-            <p>Project description goes here. Explain what the project does, technologies used, and your role in it.</p>
+            <h3>A Comparative Study of Imitation and Reinforcement Learning for Transtibial Prosthesis Control in Physics-Informed Locomotion Simulations</h3>
+            <p>Research project exploring the application of deep learning techniques to control transtibial prostheses and exoskeletons to improve mobility for individuals with lower extremity limitations. Implemented a hybrid learning pipeline integrating imitation learning (IL) and deep reinforcement learning (RL) using the Mujoco physics engine and Loco-Mujoco framework.</p>
             <div class="project-links">
-                <a href="#" target="_blank">View Project</a>
-                <a href="#" target="_blank">GitHub Repository</a>
+                <a href="https://ez-blue.github.io/ILRL_prosthesis_control/" target="_blank">View Project</a>
+                <a href="https://github.com/JintongHe/AIE_Project_Team1" target="_blank">GitHub Repository</a>
+                <a href="https://ez-blue.github.io/ILRL_prosthesis_control/static/pdfs/24782_Phase_2_Project_Report__IEEE_Conference_Template_%20(2).pdf" target="_blank">View Paper</a>
             </div>
         </div>
         <!-- Add more project cards as needed -->
