Add RL Experiments project card

--- a/projects.html
+++ b/projects.html
@@ -165,6 +165,14 @@
                 <a href="https://ez-blue.github.io/ILRL_prosthesis_control/static/pdfs/24782_Phase_2_Project_Report__IEEE_Conference_Template_%20(2).pdf" target="_blank">View Paper</a>
             </div>
         </div>
+
+        <div class="project-card">
+            <h3>Reinforcement Learning Experiments</h3>
+            <p>Implementation of various state-of-the-art reinforcement learning algorithms with the goal of beating new benchmarks. This project serves as a platform for experimenting with and comparing different RL approaches.</p>
+            <div class="project-links">
+                <a href="https://github.com/lancastre22/RL_Experiments" target="_blank">GitHub Repository</a>
+            </div>
+        </div>
         <!-- Add more project cards as needed -->
     </main>
 </body>
