--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,15 @@
             margin-bottom: 10px;
         }
 
+        .portrait {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            margin: 20px auto;
+            object-fit: cover;
+            border: 3px solid #2c3e50;
+        }
+
         .social-links {
             margin: 20px 0;
         }
@@ -139,12 +148,18 @@
                 margin: 10px auto;
                 max-width: 200px;
             }
+
+            .portrait {
+                width: 150px;
+                height: 150px;
+            }
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Manuel Lancastre</h1>
+        <img src="portrait.JPG" alt="Manuel Lancastre" class="portrait">
         <div class="nav-links">
             <a href="index.html">Resume</a>
             <a href="projects.html">Projects</a>
