Add Nutra project card

--- a/projects.html
+++ b/projects.html
@@ -188,6 +188,14 @@
                 <a href="https://github.com/lancastre22/RL_Experiments" target="_blank">GitHub Repository</a>
             </div>
         </div>
+
+        <div class="project-card">
+            <h3>Nutra</h3>
+            <p>A nutrition tracking and meal planning application that helps users maintain a healthy lifestyle through personalized dietary recommendations and progress tracking.</p>
+            <div class="project-links">
+                <a href="https://github.com/lancastre22/NUTRA" target="_blank">GitHub Repository</a>
+            </div>
+        </div>
         <!-- Add more project cards as needed -->
     </main>
 </body>
