Update Nutra project description with more detailed features

--- a/projects.html
+++ b/projects.html
@@ -191,7 +191,7 @@
 
         <div class="project-card">
             <h3>Nutra</h3>
-            <p>A nutrition tracking and meal planning application that helps users maintain a healthy lifestyle through personalized dietary recommendations and progress tracking.</p>
+            <p>A nutrition tracking and meal planning application that uses AI-powered natural language processing to log meals and provides personalized recipe recommendations based on your available ingredients and nutritional goals. The app features automated receipt scanning to identify groceries and delivers detailed nutritional analysis with daily progress tracking towards your health targets.</p>
             <div class="project-links">
                 <a href="https://github.com/lancastre22/NUTRA" target="_blank">GitHub Repository</a>
             </div>
