--- a/projects.html
+++ b/projects.html
@@ -183,7 +183,7 @@
 
         <div class="project-card">
             <h3>Reinforcement Learning Experiments</h3>
-            <p>Implementation of various state-of-the-art reinforcement learning algorithms with the goal of beating new benchmarks. This project serves as a platform for experimenting with and comparing different RL approaches.</p>
+            <p>Implementation of various state-of-the-art reinforcement learning algorithms with the goal of beating new benchmarks. This project serves as a platform for experimenting with and improving current RL approaches.</p>
             <div class="project-links">
                 <a href="https://github.com/lancastre22/RL_Experiments" target="_blank">GitHub Repository</a>
             </div>
