Update project descriptions and formatting

--- a/projects.html
+++ b/projects.html
@@ -173,7 +173,7 @@
         <h2>Projects</h2>
         <div class="project-card">
             <h3>A Comparative Study of Imitation and Reinforcement Learning for Transtibial Prosthesis Control in Physics-Informed Locomotion Simulations.</h3>
-            <p>Research project exploring the application of deep learning techniques to control transtibial prostheses to improve mobility for individuals with lower extremity limitations. Implemented imitation learning (IL) pipeline and reinforcement learning (RL) pipelines using the Mujoco physics engine and Loco-Mujoco framework.</p>
+            <p>Research project exploring the application of deep learning techniques to control transtibial prostheses to improve mobility for individuals with lower extremity limitations. Implemented imitation learning (IL) and reinforcement learning (RL) pipelines using the Mujoco physics engine and Loco-Mujoco framework.</p>
             <div class="project-links">
                 <a href="https://ez-blue.github.io/ILRL_prosthesis_control/" target="_blank">View Project</a>
                 <a href="https://github.com/JintongHe/AIE_Project_Team1" target="_blank">GitHub Repository</a>
