Move bio section below portrait and make it more concise

--- a/index.html
+++ b/index.html
@@ -179,15 +179,10 @@
 <body>
     <header>
         <h1>Manuel Lancastre</h1>
-        <div class="bio">
-            <p>Machine Learning Engineer and Reinforcement Learning Enthusiast specialized in improving current state of the art Machine Learning models and adapting them to new applications. Projects below include:</p>
-            <ul>
-                <li>Imitation and Reinforcement Learning methods for transtibial prosthesis control (open source).</li>
-                <li>Various implementations of RL models for common and challenging benchmarks (open source).</li>
-                <li>A food app using specialized computer vision, large language models, and agentic systems to tackle interesting problems such as storing ingredients through receipt scanning, meal tracking, recipe recommending (either through ingredients bought or local restaurants), and more. This one isn't open source but hopefully available soon. Reach out if you're interested!</li>
-            </ul>
-        </div>
         <img src="portrait.JPG" alt="Manuel Lancastre" class="portrait">
+        <div class="bio">
+            <p>Machine Learning Engineer and Reinforcement Learning Enthusiast specialized in improving current state of the art Machine Learning models and adapting them to new applications.</p>
+        </div>
         <div class="nav-links">
             <a href="index.html">Resume</a>
             <a href="projects.html">Projects</a>
