Remove GitHub link from Nutra project

--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@
             <ul style="font-size: 0.85em;">
                 <li>Imitation and Reinforcement Learning methods for transtibial prosthesis control (open source).</li>
                 <li>Various implementations of RL models for common and challenging benchmarks (open source).</li>
-                <li>A food app using specialized computer vision, large language models, and agentic systems to tackle interesting problems such as storing ingredients through receipt scanning, meal tracking, recipe recommending (either through ingredients bought or local restaurants), and more. This one isn't open source but hopefully available soon. Reach out if you're interested!</li>
+                <li>A food app using computer vision models, large language models, and agentic systems to tackle interesting challenges and improve current solutions. Not open source, but available soon!</li>
             </ul>
         </div>
         <div class="nav-links">
@@ -231,9 +231,6 @@
         <div class="project-card">
             <h3>Nutra</h3>
             <p>A nutrition tracking and meal planning application that uses AI-powered natural language processing to log meals and provides personalized recipe recommendations based on your available ingredients and nutritional goals. The app features automated receipt scanning to identify groceries and delivers detailed nutritional analysis with daily progress tracking towards your health targets.</p>
-            <div class="project-links">
-                <a href="https://github.com/lancastre22/NUTRA" target="_blank">GitHub Repository</a>
-            </div>
         </div>
         <!-- Add more project cards as needed -->
     </main>
