Update Nutra project description to be more concise

--- a/projects.html
+++ b/projects.html
@@ -230,7 +230,7 @@
 
         <div class="project-card">
             <h3>Nutra</h3>
-            <p>A nutrition tracking and meal planning application that uses AI-powered natural language processing to log meals and provides personalized recipe recommendations based on your available ingredients and nutritional goals. The app features automated receipt scanning to identify groceries and delivers detailed nutritional analysis with daily progress tracking towards your health targets.</p>
+            <p>A food app using computer vision models, large language models, and agentic systems to tackle interesting challenges and improve current solutions. Not open source, but available soon!</p>
         </div>
         <!-- Add more project cards as needed -->
     </main>
