Update Nutra project description in bio section

--- a/projects.html
+++ b/projects.html
@@ -230,7 +230,7 @@
 
         <div class="project-card">
             <h3>Nutra</h3>
-            <p>A food app using computer vision models, large language models, and agentic systems to tackle interesting challenges and improve current solutions. Not open source, but available soon!</p>
+            <p>A food app using computer vision models, large language models, and agentic systems to tackle interesting challenges and improve current solutions. Features include: receipt scanning, meal tracking, recipe recommending (either through ingredients bought or local restaurants), and more. The goal is an all in one solution for food tracking and planning. Not open source, but available soon!</p>
         </div>
         <!-- Add more project cards as needed -->
     </main>
